# inputplug

./: .gitignore  Cargo.toml  GNUmakefile  Makefile  README.md  inputplug.1  inputplug.c  inputplug.md  inputplug.pod
.github/workflows/: build.yml
src/: main.rs  mask_iter.rs
