[package]
name = "inputplug"
version = "0.4.0"
authors = ["Andrej Shadura <andrew@shadura.me>"]
edition = "2021"
description = "XInput monitor daemon"
license = "MIT"
repository = "https://github.com/andrewshadura/inputplug"

[dependencies]
structopt = { version = "0.3", default-features = false }
nix = { version = "0.27", features = ["process"] }
anyhow = "1.0"

[dependencies.pidfile-rs]
optional = true
version = "0.2"

[features]
default = ["pidfile"]
pidfile = ["pidfile-rs"]

[dependencies.x11rb]
version = "0.13"
features = ["xinput"]
