[package]
name = "inputplug"
version = "0.4.0"
authors = ["Andrej Shadura <andrew@shadura.me>"]
edition = "2021"
description = "XInput monitor daemon"
license = "MIT"
repository = "https://github.com/andrewshadura/inputplug"

[dependencies]
clap = { version = "3.0", features = ["derive", "std"] }
nix = { version = ">= 0.19, <1.0", features = ["process"] }
anyhow = "1.0"

[dependencies.pidfile-rs]
optional = true
version = "0.2"

[features]
default = ["pidfile"]
pidfile = ["pidfile-rs"]

[dependencies.x11rb]
version = "0.13"
features = ["xinput"]
